@@ -4,6 +4,10 @@
 
   09 Jan 2008; Mike Auty <ikelos@gentoo.org>
   app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
+  Fix up further ${ROOT} issues pointed out by Jakob.  5;)
+
+  09 Jan 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693-r1.ebuild:
   Fix up $ROOT usage in open-vm-tools.
 
   06 Jan 2008; Mike Auty <ikelos@gentoo.org>
